# alsa-learning

./: .clineignore  .clinerules  .cursorrules  .gitignore  Makefile  README.md  alsa_version.c  test_osc_cli.sh  tmp
cxx/: .gitignore  ARCH_PLAN.md  BUILD.md  CMakeLists.txt  CMakePresets.json  Untitled  main.cpp  tmp
cxx/assets/midi/bach/: README.md
cxx/assets/midi/handel/: handel_oboe_hsb1_72.mid
cxx/assets/patches/: sh101_bass.json
cxx/audio/: AudioBuffer.hpp  AudioGraph.hpp  BufferPool.hpp  MusicalClock.hpp  PerformanceProfiler.hpp  Processor.hpp  RingBufferLogger.hpp  Voice.cpp  Voice.hpp  VoiceContext.hpp  VoiceManager.cpp  VoiceManager.hpp
cxx/audio/envelope/: .gitkeep  ADEnvelopeProcessor.hpp  AdsrEnvelopeProcessor.hpp  EnvelopeProcessor.hpp
cxx/audio/filter/: DiodeLadderProcessor.hpp  MoogLadderProcessor.hpp
cxx/audio/oscillator/: .gitkeep  OscillatorProcessor.hpp  SineOscillatorProcessor.hpp  TriangleOscillatorProcessor.hpp  WavetableOscillatorProcessor.hpp
cxx/bridge/: AudioBridge.cpp  CInterface.h
cxx/demos/: midi_player.cpp
cxx/docs/: BRIDGE_GUIDE.md  DEPENDENCIES.md  GIT_POLICY.md  LIBRARY_USER_MANUAL.md  MODULE_DESC.md  PATCH_SPEC.md  PHASE_10_INTEGRATION.md  TESTING.md  TEST_AUDIT.md  things_to_optimise.md
cxx/docs/archive/: TEST_AUDIT.md
cxx/docs/archive/legacy_tests/: AlsaCheck.cpp  Phase10Tests.cpp
cxx/hal/alsa/: .gitkeep  AlsaDriver.cpp  AlsaDriver.hpp
cxx/hal/coreaudio/: .gitkeep  CoreAudioDriver.cpp  CoreAudioDriver.hpp
cxx/hal/include/: AudioDriver.hpp
cxx/include/: CInterface.h
cxx/midi/: TEST_PATCHES_MIDI.md  acid_reverb.mid  banjo.mid  basic_subtractive.mid  bass_drum.mid  bassoon.mid  bell.mid  bongo_drums.mid  bowed_bass.mid  brass.mid  chime.mid  clarinet.mid  cow_bell.mid  cymbal.mid  delay_lead.mid  dog_whistle.mid  english_horn.mid  flute.mid  fm.mid  glockenspiel.mid  gong.mid  gong_full.mid  group_strings.mid  harpsichord.mid  juno_pad.mid  juno_strings.mid  organ_drawbar.mid  percussion_noise.mid  pizzicato_violin.mid  rain.mid  recorder.mid  reverb_pad.mid  sh_bass.mid  snare_drum.mid  strings_chorus_reverb.mid  tb_bass.mid  thunder.mid  tom_tom.mid  violin.mid  violin_vibrato.mid  (+3 more)
cxx/patches/: README.md  acid_reverb.json  banjo.json  basic_subtractive.json  bass_drum.json  bassoon.json  bell.json  bell_sine.json  bongo_drums.json  bowed_bass.json  brass.json  chime.json  clarinet.json  cow_bell.json  cymbal.json  delay_lead.json  dog_whistle.json  english_horn.json  flute.json  fm.json  glockenspiel.json  gong.json  gong_full.json  gong_noise_layer.json  group_strings.json  harpsichord.json  juno_pad.json  juno_strings.json  oboe.json  organ.json  organ_drawbar.json  percussion_noise.json  pizzicato_violin.json  rain.json  recorder.json  reverb_pad.json  sh_bass.json  snare_drum.json  strings_chorus_reverb.json  tb_bass.json  (+10 more)
cxx/scripts/: run_all_tests.sh  verify_metronome_timing.sh
cxx/src/: AudioBridge.cpp  audio_check.cpp  main.cpp  metronome_test.cpp
cxx/src/bridge/: AudioBridge.cpp
cxx/src/core/: AudioBuffer.hpp  AudioGraph.hpp  AudioSettings.hpp  BufferPool.hpp  Logger.hpp  MidiEvent.hpp  MidiFilePlayer.cpp  MidiFilePlayer.hpp  MidiParser.cpp  MidiParser.hpp  ModulationMatrix.hpp  ModuleRegistry.hpp  MusicalClock.hpp  PatchStore.cpp  PatchStore.hpp  ProcessorRegistrations.cpp  SmfParser.cpp  SmfParser.hpp  SummingBus.hpp  TuningSystem.hpp  Voice.cpp  Voice.hpp  VoiceContext.hpp  VoiceFactory.cpp  VoiceFactory.hpp  VoiceManager.cpp  VoiceManager.hpp
cxx/src/dsp/: DelayLine.hpp  InputSource.hpp  Processor.hpp  SmoothedParam.hpp  TempoSync.hpp  VcaProcessor.cpp  VcaProcessor.hpp
cxx/src/dsp/analysis/: AudioTap.hpp  DctProcessor.hpp  PitchDetector.hpp  SpectralAnalysis.hpp
cxx/src/dsp/dynamics/: EnvelopeFollowerProcessor.cpp  EnvelopeFollowerProcessor.hpp  NoiseGateProcessor.cpp  NoiseGateProcessor.hpp
cxx/src/dsp/envelope/: ADEnvelopeProcessor.cpp  ADEnvelopeProcessor.hpp  AdsrEnvelopeProcessor.cpp  AdsrEnvelopeProcessor.hpp  EnvelopeProcessor.hpp
cxx/src/dsp/filter/: BandPassFilterProcessor.cpp  BandPassFilterProcessor.hpp  CemFilterProcessor.cpp  CemFilterProcessor.hpp  DiodeLadderProcessor.cpp  DiodeLadderProcessor.hpp  FilterProcessor.hpp  HighPassFilterProcessor.cpp  HighPassFilterProcessor.hpp  LadderVcfBase.cpp  LadderVcfBase.hpp  MoogLadderProcessor.cpp  VcfBase.cpp  (+4 more)
cxx/src/hal/: AudioDriver.hpp  HostDeviceInfo.hpp
cxx/tests/: AlsaCheck.cpp  EngineTests.cpp  FilterTests.cpp  Phase10Tests.cpp  StereoPolyTest.cpp  TestHelper.hpp  TimingValidation.cpp  audio_check.cpp  metronome_test.cpp  processor_check.cpp
cxx/tests/functional/: AlsaCheck.cpp  BachOrgan.cpp  BachOrganTest.cpp  Functional_BachMidi.cpp  Functional_Juno_Live.cpp  Functional_SH101_Live.cpp  PatchAnalysis.hpp  Phase10Tests.cpp  TEST_DESC.md  TimingValidation.cpp  acid_live_tweak.cpp  audio_check.cpp  automated_osc_integrity.cpp  engine_tests.cpp  filter_sweep_test.cpp  filter_tests.cpp  four_beeps_adsr.cpp  graph_audit_test.cpp  guitar_tuner_verify.cpp  metronome_test.cpp  oscillator_baseline_test.cpp  oscillator_drone_test.cpp  oscillator_integrity_test.cpp  patch_sequence_test.cpp  patch_test.cpp  processor_check.cpp  stereo_poly_test.cpp  test_acid_reverb_patch.cpp  test_banjo_patch.cpp  test_basic_subtractive_patch.cpp  test_bass_drum_patch.cpp  test_bassoon_patch.cpp  test_bell_patch.cpp  test_bell_sine_patch.cpp  test_bongo_drums_patch.cpp  test_bowed_bass_patch.cpp  test_brass_patch.cpp  test_chime_patch.cpp  test_clarinet_patch.cpp  test_cow_bell_patch.cpp  (+41 more)
cxx/tests/integration/: test_bridge.cpp  test_module_introspection.cpp  test_patch_serialization.cpp  test_tempo_sync.cpp
cxx/tests/unit/: test_bach_midi.cpp  test_bus_headroom.cpp  test_clock_logic.cpp  test_cv_utilities.cpp  test_distortion_processor.cpp  test_envelope_stages.cpp  test_lfo.cpp  test_logger.cpp  test_modulation_matrix.cpp  test_module_registry.cpp  test_oscillator.cpp  test_signal_chain.cpp  test_voice_factory.cpp  test_voice_groups.cpp  test_voice_stress.cpp
cxx/tools/: configure_modules.py  gen_test_midi.py  run_patch_smoke.sh
(+86 files in other folders)
